# kestrel

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  genindex.html  glossary.html  index.html  license.html  motivation.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  glossary.doctree  index.doctree  license.doctree  motivation.doctree
.doctrees/api/: compute.doctree  graphics.doctree  index.doctree  init.doctree  memory.doctree  pipelines.doctree  synchronization.doctree
.doctrees/drivers/: architecture.doctree  index.doctree
.doctrees/drivers/amd/: bugs.doctree  index.doctree
.doctrees/spec/: execution_model.doctree  index.doctree  memory_layout.doctree
.doctrees/usage/: examples.doctree  getting_started.doctree
.github/workflows/: docs.yml
_sources/: glossary.rst.txt  motivation.rst.txt
_sources/api/: index.rst.txt  init.rst.txt
_sources/drivers/: index.rst.txt
_sources/drivers/amd/: bugs.rst.txt  index.rst.txt
_sources/spec/: execution_model.rst.txt  memory_layout.rst.txt
api/: compute.html  graphics.html  index.html  init.html  memory.html  pipelines.html  synchronization.html
cmake/: GitSubmoduleInit.cmake
docs/: CMakeLists.txt  api.rst  conf.py  conf.py.in  index.rst  license.rst  motivation.rst  pyproject.toml
docs/_static/: custom.css
docs/amd/: index.rst
docs/api/: index.rst  init.rst  memory.rst  synchronization.rst
docs/drivers/: architecture.rst
docs/drivers/amd/: index.rst
docs/spec/: index.rst
drivers/: CMakeLists.txt  architecture.html  index.html
drivers/amd/: bugs.html  index.html
drivers/amdgpu/: cmds.cpp  cmdstream.cpp  cmdstream.h  cp_encoder.cpp  cp_encoder.h  gpuinfo.h  impl.h  init.cpp  interface.cpp  mem.cpp  pm4_encoder.cpp  pm4_encoder.h  queue.cpp  sdma_encoder.cpp  sdma_encoder.h  shader.h
drivers/amdgpu/compiler/: compiler.cpp  compiler.h  gir.h  gir_builder.cpp  rdna2_asm.h
drivers/amdgpu/hw/: amdgfxregs.h  gpuinfo.h  pm4_encoder.cpp  pm4_encoder.h  sdma_encoder.cpp  sdma_encoder.h
drivers/amdgpu/memory/: alloc.h  mem_pool.cpp  mem_pool.h  tlsf.h  tlsf_test.cpp
drivers/common/: common.h  type_format.h
drivers/common/gir/: gir.h  gir_builder.cpp  gir_dump.cpp  gir_normalize.cpp
drivers/i915/: impl.h  interface.cpp  mock.cpp
kestrel/: CMakeLists.txt
kestrel/include/kestrel/: gir.h  interface.h  kestrel.h
kestrel/rt/: api.cpp
libvektor/: CMakeLists.txt
libvektor/include/vektor/: vektor.h
libvektor/src/: beta.h  type_format.h  vektor_cmds.cpp  vektor_impl.h  vektor_init.cpp  vektor_mem.cpp  vektor_queue.cpp
libvektor/src/amdgpu/: cmdstream.cpp  cmdstream.h  gpuinfo.h  pm4.h  sdma_encoder.cpp  sdma_encoder.h
libvektor/test/01_hello_malloc/: hello_malloc.cpp
libvektor/test/02_hello_queue/: hello_queue.cpp
libvektor/test/03_hello_2queue/: hello_2queue.cpp
libvektor/test/04_hello_timestamp/: hello_timestamp.cpp
spec/: execution_model.html  index.html  memory_layout.html
test/: CMakeLists.txt
test/common/: test_utils.h
test/examples/02_hello_queue/: hello_queue.cpp
test/examples/03_hello_2queue/: hello_2queue.cpp
test/examples/04_hello_timestamp/: hello_timestamp.cpp
test/examples/05_hello_transfer_copy/: transfer_copy.cpp
test/examples/06_hello_sync/: hello_sync.cpp
test/examples/07_hello_dispatch/: hello_dispatch.cpp
test/examples/08_tiny_allocations/: tiny_allocations.cpp
test/test/01_hello_malloc/: hello_malloc.cpp
test/test/05_hello_transfer_copy/: transfer_copy.cpp
test/test/06_hello_sync/: hello_sync.cpp
test/unit/: test.cpp
usage/: examples.html  getting_started.html
